--- a/Pascal/F.3/IndividualProgrammingProject/IndividualProgrammingProject.lpi
+++ b/Pascal/F.3/IndividualProgrammingProject/IndividualProgrammingProject.lpi
@@ -33,13 +33,16 @@
       <FormatVersion Value="2"/>
       <Modes Count="0"/>
     </RunParams>
-    <RequiredPackages Count="2">
+    <RequiredPackages Count="3">
       <Item1>
         <PackageName Value="LCL"/>
       </Item1>
       <Item2>
         <PackageName Value="lazopenglcontext"/>
       </Item2>
+      <Item3>
+        <PackageName Value="multithreadprocslaz"/>
+      </Item3>
     </RequiredPackages>
     <Units Count="4">
       <Unit0>
