--- a/Pascal/F.3/IndividualProgrammingProject/IndividualProgrammingProject.lpi
+++ b/Pascal/F.3/IndividualProgrammingProject/IndividualProgrammingProject.lpi
@@ -15,6 +15,8 @@
       <UseXPManifest Value="True"/>
       <XPManifest>
         <DpiAware Value="True"/>
+        <TextName Value="io.github.etaoinshrdlcumwfgypbvkjxqz.IndividualProgrammingProject"/>
+        <TextDesc Value="No description given."/>
       </XPManifest>
       <Icon Value="0"/>
       <Resources Count="2">
@@ -26,7 +28,7 @@
       <UseVersionInfo Value="True"/>
       <AutoIncrementBuild Value="True"/>
       <MajorVersionNr Value="1"/>
-      <BuildNr Value="38"/>
+      <BuildNr Value="42"/>
     </VersionInfo>
     <BuildModes Count="4">
       <Item1 Name="Debug" Default="True"/>
@@ -191,16 +193,19 @@
       <FormatVersion Value="2"/>
       <Modes Count="0"/>
     </RunParams>
-    <RequiredPackages Count="3">
+    <RequiredPackages Count="4">
       <Item1>
-        <PackageName Value="LCL"/>
+        <PackageName Value="TAChartLazarusPkg"/>
       </Item1>
       <Item2>
-        <PackageName Value="lazopenglcontext"/>
+        <PackageName Value="LCL"/>
       </Item2>
       <Item3>
-        <PackageName Value="multithreadprocslaz"/>
+        <PackageName Value="lazopenglcontext"/>
       </Item3>
+      <Item4>
+        <PackageName Value="multithreadprocslaz"/>
+      </Item4>
     </RequiredPackages>
     <Units Count="6">
       <Unit0>
