--- a/C++/HKOI/.vscode/settings.json
+++ b/C++/HKOI/.vscode/settings.json
@@ -12,6 +12,38 @@
         "xmemory0": "cpp",
         "xtr1common": "cpp",
         "ios": "cpp",
-        "xlocnum": "cpp"
+        "xlocnum": "cpp",
+        "vector": "cpp",
+        "xutility": "cpp",
+        "functional": "cpp",
+        "map": "cpp",
+        "cmath": "cpp",
+        "cstddef": "cpp",
+        "cstdint": "cpp",
+        "cstdio": "cpp",
+        "cstdlib": "cpp",
+        "cstring": "cpp",
+        "cwchar": "cpp",
+        "exception": "cpp",
+        "initializer_list": "cpp",
+        "limits": "cpp",
+        "list": "cpp",
+        "memory": "cpp",
+        "new": "cpp",
+        "stdexcept": "cpp",
+        "streambuf": "cpp",
+        "system_error": "cpp",
+        "tuple": "cpp",
+        "typeinfo": "cpp",
+        "unordered_map": "cpp",
+        "utility": "cpp",
+        "xfacet": "cpp",
+        "xhash": "cpp",
+        "xlocinfo": "cpp",
+        "xmemory": "cpp",
+        "xstddef": "cpp",
+        "xtree": "cpp",
+        "set": "cpp",
+        "unordered_set": "cpp"
     }
 }
